- Small alignment issue fix.

--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,6 @@ body {
 	border-radius: 4px;
 	cursor: pointer;
 	font-size: 0.9em;
-	margin-right: 5px;
 	width: auto;
 	flex-shrink: 0;
 }
